summer-k8s/k8s/Deployment/hello-application.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    run: load-balancer-example
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      run: load-balancer-example
  replicas: 2
  template:
    metadata:
      labels:
        run: load-balancer-example
    spec:
      containers:
      - name: hello-world
        image: gcr.io/google-samples/node-hello:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          protocol: TCP
