summer-k8s/k8s/Deployment/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 8080
